Thu Sep 25 23:31:30 1997  Scott Christley <scottc@net-community.com>

	* library.make (internal-install-lib): Install correct file.
	* common.make (GNUSTEP_TARGET_HEADERS): New variable.
	* rules.make (ALL_OBJCFLAGS, ALL_CFLAGS): Add target header
	directory to include directories.

Thu Sep 25 20:20:50 1997  Scott Christley <scottc@net-community.com>

	* Makefile.in (config.site): Install in share directory not
	the makefile package directory.

Thu Sep 25 18:22:43 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* DESIGN: A word about building different types of a project.

Thu Sep 25 17:32:37 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* DESIGN: Updated to contain the latest changes in the package.
	* Makefile.in: Use a for loop to install the files.
	* aggregate.make: Commpress all the internal-* targets into a single
	rule to make the maintanance easier.

	* rules.make: Add rule for creating the object files directory here
	instead of having the same rule in several files.
	* application.make: Remove creation of the object files directory. Just
	add the dependency to the targets.
	* tool.make: Likewise.

	* clean.make: Optimize cannonicalization of host/target cpu/os/vendor
	by adding a flag that says if they are already cannoical or not.
	* target.make: Use the variable defined above to speed up the building
	process.

	* common.make: Added support for building separate versions of
	libraries for debugging, profiling and/or static or shared. Use
	different object file directories instead of using a suffix to the
	file name. Building a shared library is now the default for systems
	that support shared libraries.
	* library.make: Removed the two variables for specifying the shared
	library and the static one. Added two new target variables which
	define commands to be run after the installation of either the static
	or of the shared library.
	* target.make: Define the two new variables above for the different
	supported systems.
