@@ -40,7 +40,6 @@ AC_CANONICAL_SYSTEM
 #--------------------------------------------------------------------
 AC_PROG_CC
 AC_PROG_CPP
-AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_LN_S
 
